k8s/envoy-config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-config
  namespace: incident-env
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - name: listener_0
          address:
            socket_address:
              address: 0.0.0.0
              port_value: 8080
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: ingress
                    route_config:
                      virtual_hosts:
                        - name: incident_env
                          domains: ["*"]
                          routes:
                            - match:
                                prefix: "/payments"
                              route:
                                cluster: payments
                            - match:
                                prefix: "/pipeline"
                              route:
                                cluster: data_pipeline
                            - match:
                                prefix: "/analytics"
                              route:
                                cluster: analytics
                            - match:
                                prefix: "/"
                              route:
                                cluster: api_gateway
                    http_filters:
                      - name: envoy.filters.http.router
      clusters:
        - name: payments
          connect_timeout: 5s
          load_assignment:
            cluster_name: payments
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: payments
                          port_value: 8000
        - name: api_gateway
          connect_timeout: 5s
          load_assignment:
            cluster_name: api_gateway
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: api-gateway
                          port_value: 8000
        - name: data_pipeline
          connect_timeout: 5s
          load_assignment:
            cluster_name: data_pipeline
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: data-pipeline
                          port_value: 8000
        - name: analytics
          connect_timeout: 5s
          load_assignment:
            cluster_name: analytics
            endpoints:
              - lb_endpoints:
                  - endpoint:
                      address:
                        socket_address:
                          address: analytics
                          port_value: 8000
